0.106
  - Remove debug warning accidentally left in the UDP input.

0.105
  - Depend on latest MooX::Options to stop install fails.

0.104
  - Fix to work with MooX::Options 3.7

0.103
  - Message::Passing::Input::FileTail now defaults to outputting a hash
    of data which contains additional metadata to the message line,
    such as the hostname, timestamp, filename. A 'raw => 1' option has
    been added which can be used to restore the original behaviour.

  - Add an experimental (and undocumented)
    Message::Passing::Filter::ToLogstash

  - Fix issue in JSON decoder when processing exceptions.

0.102
  - Add error chain support to the JSON encoder and decoder so that an
    error is logged if JSON encoding or decoding fails.

  - Make default error chain do JSON encoding on errors so that they're
    readable.

  - Make CLI error chain have options for the error encoder.

0.101
  - Fix daemonization features provided by Message::Passing::Role::Script
    to work on the command line again by exlicitly using MooX::Options

  - Fix Message::Passing::Input::FileTail to not die if the tail process
    is killed for any reason. It is instead re-spawned.. RT#78851

0.100
  - Port the dist to Moo, so that the core of Message::Passing
    uses no XS code. Components can still be written using full
    Moose, as Moo supports upgrading classes to full Moose classes.

    Note however that this implies the following changes to custom scripts:

    - Scripts should use MooX::Options instead of MooseX::Getopt,
      attributes will need to be updated to use the 'option' keyword
      rather than 'has'.

    - Message::Passing::Role::CLIComponent is now built on top of
      Package::Variant rather than MooseX::Role::Parameterized,
      and so scripts should now import it and use the function
      provided to generate roles.

  - Add UDP socket Input and Output, allowing transit of arbitrary
    UDP packets.

  - Add Travis continuous integration to the project.

0.010