@@ -26,7 +26,7 @@ requires 'String::RewritePrefix';
 requires 'JSON' => '2.0';
 requires 'Try::Tiny';
 requires 'Task::Weaken';
-requires 'Sys::Hostname';
+requires 'Sys::Hostname::Long';
 requires 'DateTime';
 
 install_script 'script/message-pass';
