@@ -1,3 +1,8 @@
+  - Change Input::FileTail to use Sys::Hostname::Long
+
+  - Fix bug causing crash with no helpful error message if PID file
+    location is not writeable.
+
 0.106
   - Remove debug warning accidentally left in the UDP input.
 
